# CLParser

./: CMakeLists.txt  README.MD
example/: CMakeLists.txt  example.cpp
include/CLParser/: Arguments.hpp  CLParser.hpp
src/: Arguments.cpp  CLParser.cpp  CMakeLists.txt
tests/: CMakeLists.txt  ParserTests.cpp
